change the security config file